--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Status of this document: 26.4.2009    christian kurtsiefer
+Status of this document: 15.7.2009    christian kurtsiefer
 
-This is a program set to run a Ocean optics USB2000 spectrometer. It consists
-of the following parts:
+This is a program set to run a Ocean optics USB2000/2000+ spectrometer. It
+consists of the following parts:
 
 1. Device driver
 
@@ -14,7 +14,7 @@ machine, do the following:
       it will host the driver code.
   1.2 as superuser, use the "make udev" command to install the device rule on
       the target machine. This should install a proper hotplug script. If you
-      now attach a USB2000 module, there should be a "Spectrometer0" entry in
+      now attach a USB2000(+) module, there should be a "Spectrometer0" entry in
       the /dev and in the /dev/ioboards directory.
   1.3 That's it. There should be no further things necessary to run the
       applications.
@@ -23,9 +23,8 @@ The driver is intended to provide a file tree entry through which the
 spectrometer functions are carried out via ioctl() commands; a list of these
 commands and their description is in the header file usb2000.h, which also
 needs to be linked to an application program for having access to the command
-names. The main driver code is the C program usb2000.c which is not yet able
-to also handle other spectrometers of that family. As soon as we have an idea
-about the USB identities, that should not be a problem anymore. Currently,
+names. The main driver code is the C program usb2000.c which is able to
+handle the USB2000 and the USB200+ spectrometer, possibly more. Currently,
 there is also only a subset of all commands of the USB2000+ implemented from
 which I thought they may be available under the USB2000 as well.
 
