--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Status of this document: 15.7.2009    christian kurtsiefer
+Status of this document: 12.7.2018    christian kurtsiefer
+
+Latest kernel tests: 4.12, 4.4
 
 This is a program set to run a Ocean optics USB2000/2000+ spectrometer. It
 consists of the following parts:
